--- a/coturn/docker-compose.yml
+++ b/coturn/docker-compose.yml
@@ -1,9 +1,8 @@
-
 services:
   we-meet-coturn:
     env_file: ../.env
     image: coturn/coturn:4.6.2
-    container_name: wee-meet-coturn
+    container_name: ${APP_NAME}-coturn
     ports:
       - "${TURN_PORT_UDP}:${TURN_PORT_UDP}/udp"
       - "${TURN_PORT_TCP}:${TURN_PORT_TCP}/tcp"
@@ -17,9 +16,3 @@ services:
     volumes:
       - ./turnserver.conf:/etc/coturn/turnserver.conf
     restart: always
-    networks:
-      - wee-meet-network
-
-networks:
-  wee-meet-network:
-    driver: bridge
