--- a/nginx/.env
+++ b/nginx/.env
@@ -1,8 +1,8 @@
-MODE=development
-#MODE=production
-
 #APP_NAME для названий сетей префиксов контейнеров и тд
 APP_NAME=we-meet
+
+MODE=development
+#MODE=production
 
 # TURN Ports
 TURN_PORT_UDP=3478
@@ -18,3 +18,7 @@ TURN_USERNAME=hui
 TURN_PASSWORD=123
 TURN_STATIC_AUTH_SECRET=super-hui
 
+#backend
+
+APP_PORT=3000
+METERED_API_KEY='hui'
