--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
 MODE=development
 #MODE=production
 
-#APP_NAME для названий сетей префиксов контейнеров и тд
-APP_NAME=we-meet
-
 # TURN Ports
 TURN_PORT_UDP=3478
 TURN_PORT_TCP=3478
@@ -17,4 +14,12 @@ TURN_PUBLIC_IP=127.0.0.1
 TURN_USERNAME=hui
 TURN_PASSWORD=123
 TURN_STATIC_AUTH_SECRET=super-hui
+
+# FRONTEND_APP
+VITE_WE_MEET_API_URL='http://localhost:3000'
+VITE_WE_MEET_WS_URL='ws://localhost:3000'
+VITE_APP_DEV_PORT=3003
+
+# BACKEND_APP
+BACKEND_APP_PORT=3000
 
