--- a/.env
+++ b/.env
@@ -1,25 +1,23 @@
 MODE=development
 #MODE=production
 
-# TURN Ports
+# TURN
 TURN_PORT_UDP=3478
 TURN_PORT_TCP=3478
 TURN_PORT_TLS=5349
 
-# Domain и IP
 TURN_REALM=localhost
 TURN_PUBLIC_IP=127.0.0.1
 
-# TURN Auth
 TURN_USERNAME=hui
 TURN_PASSWORD=123
 TURN_STATIC_AUTH_SECRET=super-hui
 
 # FRONTEND_APP
+VITE_APP_DEV_PORT=3003
 VITE_WE_MEET_API_URL='http://localhost:3000'
 VITE_WE_MEET_WS_URL='ws://localhost:3000'
-VITE_APP_DEV_PORT=3003
 
 # BACKEND_APP
 BACKEND_APP_PORT=3000
-
+METERED_API_KEY='hui'
