--- a/coturn/turnserver.conf
+++ b/coturn/turnserver.conf
@@ -1,22 +1,5 @@
-# Basic configuration
-listening-port=${TURN_PORT_UDP}
-tls-listening-port=${TURN_PORT_TLS}
-alt-listening-port=${TURN_PORT_TCP}
-external-ip=${TURN_PUBLIC_IP}
-realm=${TURN_REALM}
-allowed-peer-ip=127.0.0.1
-allowed-peer-ip=::1
-
-user=${TURN_USERNAME}:${TURN_PASSWORD}
-lt-cred-mech
-use-auth-secret
-static-auth-secret=${TURN_PORT_TCP}
-
-# Performance
+listening-port=3478
+tls-listening-port=5349
 min-port=49152
 max-port=49200
-no-multicast-peers
-
-# Logging
 verbose
-simple-log
