--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,14 +8,8 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://we-meet-frontend:80;
-        }
-
         location /api/ {
             proxy_pass http://we-meet-backend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
         location /ws/ {
@@ -23,8 +17,11 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            proxy_read_timeout 86400;
-            proxy_send_timeout 86400;
+        }
+
+        location / {
+            return 200 "We Meet Nginx";
+            add_header Content-Type text/plain;
         }
     }
 }
