--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,11 @@ http {
     server {
         listen 80;
 
+        location / {
+            return 200 "We Meet Nginx";
+            add_header Content-Type text/plain;
+        }
+
         location /api/ {
             proxy_pass http://we-meet-backend:3000;
         }
