--- a/we-meet-nginx/docker-compose.yml
+++ b/we-meet-nginx/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ../ssl:/etc/letsencrypt:ro
     networks:
       - we-meet-network
 
