--- a/.env
+++ b/.env
@@ -1,18 +1,22 @@
+MODE=dev
+#MODE=prod
 
-DOMAIN=localhost
+# Domain и IP
+DOMAIN=localhost#домен vps
+TURN_PUBLIC_IP=127.0.0.1# внешний ip vps
+SSL_EMAIL=abc@example.ru
 
-# TURN
-TURN_PUBLIC_IP=127.0.0.1
-
+# TURN Auth
 TURN_USERNAME=hui
 TURN_PASSWORD=123
 TURN_STATIC_AUTH_SECRET=super-hui
 
 # FRONTEND_APP
-VITE_APP_DEV_PORT=3003
 VITE_WE_MEET_API_URL='http://localhost:3000'
 VITE_WE_MEET_WS_URL='ws://localhost:3000'
+VITE_APP_DEV_PORT=3003
 
 # BACKEND_APP
 BACKEND_APP_PORT=3000
 METERED_API_KEY='hui'
+
