--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-
-# Domain и IP
-DOMAIN=localhost
-#домен vps
-TURN_PUBLIC_IP=127.0.0.1
-# внешний ip vps
-SSL_EMAIL=abc@example.ru
-
+# email for ssl
+EMAIL=abc@example.ru
 # TURN
 TURN_USERNAME=hui
 TURN_PASSWORD=123
