--- a/we-meet-coturn/docker-compose.yml
+++ b/we-meet-coturn/docker-compose.yml
@@ -17,21 +17,13 @@ services:
       DETECT_EXTERNAL_IP: "true"
       # Статический секрет для аутентификации TODO
 #      STATIC_AUTH_SECRET: "${TURN_STATIC_AUTH_SECRET}"
-      # Realm
-      REALM: "${DOMAIN}"
     volumes:
-      # Конфиг файл
-      - "./turnserver.conf:/etc/coturn/turnserver.conf:ro"
-      # База данных и логи
-      - "./coturn-data:/var/lib/coturn"
-      - "./coturn-logs:/var/log"
-      - ../ssl:/etc/letsencrypt:ro
+      - ./turnserver.conf:/etc/coturn/turnserver.conf:ro
+      - ./coturn-data:/var/lib/coturn
+      - ./coturn-logs:/var/log
+      - ../ssl:/etc/coturn/ssl:ro
     networks:
       - we-meet-network
-
-volumes:
-  coturn-data:
-  coturn-logs:
 
 networks:
   we-meet-network:
