--- a/we-meet-traefik/traefik.yml
+++ b/we-meet-traefik/traefik.yml
@@ -1,57 +1,49 @@
-# Точки входа (порты, на которых слушает Traefik)
 entryPoints:
   web:
     address: ":80"
   websecure:
     address: ":443"
 
-# Провайдеры конфигурации (откуда Traefik читает настройки)
+serversTransport:
+  insecureSkipVerify: true
+
 providers:
   docker:
-    exposedByDefault: false # не публиковать контейнеры без явной конфигурации
+    exposedByDefault: false
   file:
-    filename: /etc/traefik/traefik.yml # используем этот же файл как динамический
-    watch: true # перезагружать при изменении
+    filename: /etc/traefik/traefik.yml
+    watch: true
 
-# Let's Encrypt (ACME) для HTTPS на VPS (нужен SSL_EMAIL в .env)
 certificatesResolvers:
   letsencrypt:
     acme:
-      email: "${SSL_EMAIL}"
-      storage: /etc/letsencrypt/acme.json
+      email: "${EMAIL}"
+      storage: /etc/traefik/acme.json
       httpChallenge:
         entryPoint: web
 
-# Логи Traefik
+certificates:
+  - certFile: /etc/traefik/ssl/cert.pem
+    keyFile: /etc/traefik/ssl/private.key
+    stores:
+      - default
+
 log:
   level: INFO
 
-# Логи доступа (запросы)
-accessLog: {}
-
-# Панель Traefik. Включена, но НЕ публикуется напрямую (проксируем ниже как service api@internal)
 api:
   dashboard: true
 
-# Динамическая конфигурация (роутеры/сервисы) — проксируем только backend
 http:
   routers:
-    # 🔴 ВАЖНО: Этот роутер должен быть ПЕРВЫМ! 🔴
-    # Let's Encrypt ACME Challenge (для получения SSL сертификата)
-    acme-challenge:
-      entryPoints: [web]
-      rule: PathPrefix(`/.well-known/acme-challenge/`)
-      service: noop@internal  # специальный сервис для Traefik
-      priority: 1000  # высокий приоритет
-
-    # Dashboard для локальной разработки (HTTP)
+    # Дашборд HTTP (редирект на HTTPS)
     traefik-dashboard:
       entryPoints: [web]
       rule: PathPrefix(`/dashboard`)
       middlewares: [traefik-auth]
       service: api@internal
 
-    # Dashboard для продакшена (HTTPS)
+    # Дашборд HTTPS
     traefik-websecure:
       entryPoints: [websecure]
       rule: PathPrefix(`/dashboard`)
@@ -60,13 +52,15 @@ http:
       middlewares: [traefik-auth]
       service: api@internal
 
+    # Бэкенд HTTP (редирект на HTTPS)
     backend-web:
-      entryPoints: [web] # HTTP (локальная разработка)
+      entryPoints: [web]
       rule: PathPrefix(`/api`)
       service: we-meet-backend
 
+    # Бэкенд HTTPS
     backend-websecure:
-      entryPoints: [websecure] # HTTPS (VPS)
+      entryPoints: [websecure]
       rule: PathPrefix(`/api`)
       tls:
         certResolver: letsencrypt
