--- a/we-meet-traefik/traefik.yml
+++ b/we-meet-traefik/traefik.yml
@@ -9,6 +9,13 @@
     websecure:
       address: ":443"
 
+  providers:
+    docker:
+      exposedByDefault: false
+    file:
+      filename: /etc/traefik/traefik.yml
+      watch: true
+
   log:
     level: DEBUG
 
