--- a/we-meet-traefik/docker-compose.yml
+++ b/we-meet-traefik/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./traefik.yml:/etc/traefik/traefik.yml
+      - ./acme.json:/etc/traefik/acme.json
       - ../ssl:/etc/traefik/acme/
     networks:
       - we-meet-network
