--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -22,6 +22,12 @@
       - certFile: /etc/traefik/ssl/wildcard.crt
         keyFile: /etc/traefik/ssl/wildcard.key
 
+    stores:
+      default:
+        defaultCertificate:
+          certFile: /etc/traefik/ssl/wildcard.crt
+          keyFile: /etc/traefik/ssl/wildcard.key
+
   log:
     level: DEBUG
 
