--- a/coturn/turnserver.conf
+++ b/coturn/turnserver.conf
@@ -3,3 +3,7 @@ tls-listening-port=5349
 min-port=49152
 max-port=49200
 verbose
+
+; # SSL certificates
+cert=/etc/coturn/ssl/wildcard.crt
+pkey=/etc/coturn/ssl/wildcard.key
