update turn config

--- a/coturn/turnserver.conf
+++ b/coturn/turnserver.conf
@@ -4,6 +4,10 @@ min-port=49152
 max-port=49200
 verbose
 
+
 ; # SSL certificates
 cert=/etc/coturn/ssl/wildcard.crt
 pkey=/etc/coturn/ssl/wildcard.key
+
+lt-cred-mech
+user=${TURN_USERNAME}:${TURN_PASSWORD}
